--- a/index.html
+++ b/index.html
@@ -49,10 +49,28 @@
         </div>
     </nav>
     <!-- nav end -->
-    
 
+    <div class="container-fluid one">
+        <div class="row justify-content-end">
+            <div class="text-end col-sm-10 col-md-8 col-lg-6 col-xl-4">
+                <h1>
+                    Знайдіть своє натхнення серед природи
+                </h1>
+            </div>
+        </div>
+    </div>
 
-
+    <section class="inf">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 p-5">
+                    <h2>number</h2>
+                    <p>Три ексклюзивні та комфортабельні yjvthb Løvtag, Et, Ro_Ly, спроектовані архітектором Сігурдом Ларсеном. Усі вони мають відкритий простір з двоспальним ліжком, двоспальним диваном-ліжком, кухнею, окремим туалетом і душем на відкритому повітрі. На даху, оточена кронами дерев, розташована тераса, яка знаходиться близько дев’яти метрів над землею. Котеджі побудовані навколо високих старих дерев, які проходять через весь котедж від підлоги до стелі.</p>
+                </div>
+                <div class="col-lg-6 p-5"><img src="bed.jpg" alt=""></div>
+            </div>
+        </div>
+    </section>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
