--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="shortcut icon" href="ico.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -50,6 +50,7 @@
     </nav>
     <!-- nav end -->
 
+    <!-- one -->
     <div class="container-fluid one">
         <div class="row justify-content-end">
             <div class="text-end col-sm-10 col-md-8 col-lg-6 col-xl-4">
@@ -59,18 +60,56 @@
             </div>
         </div>
     </div>
+    <!--  -->
 
     <section class="inf">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 p-5">
                     <h2>number</h2>
-                    <p>Три ексклюзивні та комфортабельні yjvthb Løvtag, Et, Ro_Ly, спроектовані архітектором Сігурдом Ларсеном. Усі вони мають відкритий простір з двоспальним ліжком, двоспальним диваном-ліжком, кухнею, окремим туалетом і душем на відкритому повітрі. На даху, оточена кронами дерев, розташована тераса, яка знаходиться близько дев’яти метрів над землею. Котеджі побудовані навколо високих старих дерев, які проходять через весь котедж від підлоги до стелі.</p>
+                    <p>Три ексклюзивні та комфортабельні yjvthb Løvtag, Et, Ro_Ly, спроектовані архітектором Сігурдом
+                        Ларсеном. Усі вони мають відкритий простір з двоспальним ліжком, двоспальним диваном-ліжком,
+                        кухнею, окремим туалетом і душем на відкритому повітрі. На даху, оточена кронами дерев,
+                        розташована тераса, яка знаходиться близько дев’яти метрів над землею. Котеджі побудовані
+                        навколо високих старих дерев, які проходять через весь котедж від підлоги до стелі.</p>
                 </div>
                 <div class="col-lg-6 p-5"><img src="bed.jpg" alt=""></div>
             </div>
         </div>
     </section>
+
+    <!-- 3 foto -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 p-2"><img src="img-1.jpg" alt=""></div>
+            <div class="col-md-4 p-2"><img src="img-2.jpg" alt=""></div>
+            <div class="col-md-4 p-2"><img src="img-3.jpg" alt=""></div>
+        </div>
+    </div>
+    <!--  -->
+
+    <section class="hut sec">
+        <div class="container-fluid hut">
+            <div class="row">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <h2>
+                        Hutina
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container out">
+        <div class="row">
+            <div class="col-6">
+                <img src="" alt="">
+            </div>
+            <div class="col-6">
+
+            </div>
+        </div>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
